--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,8 @@ repos:
   #       entry: prevent-dangling-todos
   #       language: python
   #       types: [text]
-  #       args: ["-j", "MYJIRA"]  # Replace MYJIRA with your Jira project prefix(es)
+  #       args: ["--check-unstaged"]
+  #       always_run: true
 
   # Standard pre-commit hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -31,5 +32,5 @@ repos:
     rev: v1.13.0
     hooks:
       - id: mypy
-        additional_dependencies: []
+        additional_dependencies: [types-PyYAML]
         args: [--ignore-missing-imports]
