--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [{ name = "Gavin Medley", email = "gavin.medley@lasp.colorado.edu" }]
 license = { text = "BSD-3" }
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = []
+dependencies = ["identify>=2.0.0", "pyyaml>=6.0"]
 
 [project.scripts]
 prevent-dangling-todos = "prevent_dangling_todos.cli:main"
@@ -19,6 +19,7 @@ pytest = "*"
 pytest-cov = "*"
 ruff = "*"
 mypy = "*"
+types-pyyaml = "^6.0.12.20250915"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
