Add Line By Line Exclusion
We follow Flake8 FIX00N exclusions for line by line ignores of work
items such as TODO, FIXME, XXX, and HACK. Any of the Flake8 FIX* ignores
will cause prevent-dangling-todos to ignore the line. This allows using
FIX001 to ignore custom comment prefixes like BUGFIX as well.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,15 @@
 repos:
-  # # Local hook for prevent-dangling-todos (this repository)
-  # - repo: local
-  #   hooks:
-  #     - id: prevent-dangling-todos
-  #       name: prevent-dangling-todos
-  #       entry: prevent-dangling-todos
-  #       language: python
-  #       types: [text]
-  #       args: ["--check-unstaged"]
-  #       always_run: true
+  # Local hook for prevent-dangling-todos (this repository)
+  - repo: local
+    hooks:
+      - id: prevent-dangling-todos
+        name: prevent-dangling-todos
+        entry: prevent-dangling-todos
+        language: python
+        types: [text]
+        args: ["--check-unstaged", "--comment-prefix=TODO"]
+        exclude: '^\.pre-commit-config\.yaml$|^tests/.*$'
+        always_run: true
 
   # Standard pre-commit hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
