Remove References to Jira
This hook should be suitable for any ticketing system, not just Jira.,
so we changed --jira-prefix (-j) to --ticket-prefix (-t) and removed
references to Jira specifically.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,8 @@ repos:
         language: python
         types: [text]
         args: ["--check-unstaged", "--comment-prefix=TODO"]
-        exclude: '^\.pre-commit-config\.yaml$|^tests/.*$'
+        files: '.*\.py'
+        exclude: '^tests/.*$'
         always_run: true
 
   # Standard pre-commit hooks
