Remove Windows OS Test Case
Grep is not reliably available on Windows platforms so the grep search
tests don't pass there (though the fallback behavior of line by line
searching may work). We're disabling the Windows support testing for now
and creating an issue to support Windows in the future.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: ["3.11", "3.12", "3.13"]
     defaults:
       run:
@@ -50,17 +50,17 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        source $VENV 
+        source $VENV
         pytest --cov=prevent_dangling_todos --cov-report=xml --cov-report=term-missing
 
     - name: Run linting
       run: |
-        source $VENV 
+        source $VENV
         ruff check .
 
     - name: Run type checking
       run: |
-        source $VENV 
+        source $VENV
         mypy prevent_dangling_todos
 
     - name: Upload coverage to Codecov
