--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,13 +1,14 @@
 # This Dockerfile sets up a development environment for the project
 # It is tested on an M3 Mac but is intended to work for x86 architectures as well.
-FROM python:3.12-slim
+FROM python:3.13-slim
 ARG TARGETPLATFORM
-ARG USERNAME=devuser
+USER root
 
-RUN adduser $USERNAME
+# Set `DEVCONTAINER` environment variable to help with orientation
+ENV DEVCONTAINER=true
 
 # Install basic development tools and iptables/ipset
-RUN apt update && apt install -y less \
+RUN apt-get update && apt-get install -y less \
   git \
   procps \
   sudo \
@@ -39,30 +40,8 @@ RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
   && apt-get install -y nodejs \
   && rm -rf /var/lib/apt/lists/*
 
-# Ensure default devuser user has access to /usr/local/share
-RUN mkdir -p /usr/local/share/npm-global && \
-  chown -R $USERNAME:$USERNAME /usr/local/share
-
-# Set `DEVCONTAINER` environment variable to help with orientation
-ENV DEVCONTAINER=true
-
-# Create Claude config directory and set permissions
-RUN mkdir -p /home/$USERNAME/.claude && \
-  chown -R $USERNAME:$USERNAME /home/$USERNAME/.claude
-
 # Install UV using the official installer (recommended method)
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
-
-# Create virtual environment and permanently activate it for this image
-# Note this venv is created outside of the context of the repo. If the devcontainer is created in mount mode,
-# we don't want to overwrite any local virtual environment
-ENV VIRTUAL_ENV=/opt/venv
-RUN python -m venv $VIRTUAL_ENV && chown $USERNAME:$USERNAME -R $VIRTUAL_ENV
-# This adds not only the venv python executable but also all installed entrypoints to the PATH
-ENV PATH="$VIRTUAL_ENV/bin:$PATH"
-
-# Set up non-root user
-USER $USERNAME
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /usr/local/bin/
 
 # Install global packages
 ENV NPM_CONFIG_PREFIX=/usr/local/share/npm-global
@@ -75,6 +54,8 @@ ENV SHELL=/bin/zsh
 RUN sh -c "$(wget -O- https://github.com/deluan/zsh-in-docker/releases/download/v1.2.0/zsh-in-docker.sh)" -- \
   -p git \
   -p colorize \
+  -p python \
+  -p uv \
   -p https://github.com/zsh-users/zsh-autosuggestions \
   -p https://github.com/zsh-users/zsh-completions \
   -x
@@ -82,13 +63,12 @@ RUN sh -c "$(wget -O- https://github.com/deluan/zsh-in-docker/releases/download/
 # Install Claude
 RUN npm install -g @anthropic-ai/claude-code
 
+# Create Claude config directory
+RUN mkdir -p /root/.claude
+
 # Copy and set up dev environment script
-USER root
 COPY setup-dev-environment.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/setup-dev-environment.sh
 
-USER $USERNAME
-
-# Copy CLAUDE.md and settings to Claude config directory
-COPY CLAUDE.md /home/$USERNAME/.claude/
-COPY claude-settings.json /home/$USERNAME/.claude/settings.json
+# Copy CLAUDE.md to global Claude config directory
+COPY CLAUDE.md /root/.claude/CLAUDE.md
